Added basic header structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,46 @@
     </head>
 
     <body>
+        <header class="header">
+            <div class="container">
+                <nav class="header__navigation navigation">
+                    <img src="/assets/images/logo.svg" alt="" class="navigation__logo">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link navigation__link--active">What is Fortuna</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">ICO details</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Roadmap</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Team</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="navigation__button">Login</a>
+                </nav>
+                <div class="header__description">
+                    <h1 class="header__title section-title">
+                        The first zero commission blockchain-based app for cryptocurrency and stock trading
+                    </h1>
+                    <div class="header__text">
+                        <p>
+                            Fortuna is the first commission-free, blockchain-based trading and investing app that is
+                            focused on user experience, providing superior conditions for traders, as well a
+                            offering a
+                            level of security and transparency up to the highest standards of technology available
+                            today.
+                        </p>
+                    </div>
+                    <div class="header__panel">
+                        <a href="#" class="button">Whitepaper</a>
+                        <a href="#" class="button button--filled">Register for ICO</a>
+                    </div>
+                </div>
+            </div>
+        </header>
     </body>
 
 </html>
