Added basic trading section structure

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,67 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section class="trading">
+                <section class="trading-power trading__section section">
+                    <div class="trading__container container">
+                        <div class="trading__demo">
+                            <img src="/assets/images/phones/phone-1.jpg" alt="" class="trading__image" />
+                        </div>
+                        <div class="trading__description">
+                            <h2 class="trading-power__title section-title">
+                                Elevate your trading to the next level wherever you are
+                            </h2>
+                            <div class="trading__text">
+                                <p>
+                                    Fortuna is the first solution to pack the vast functionality of web-based platforms
+                                    into one powerful mobile app.
+                                </p>
+                            </div>
+                            <ul class="trading-features">
+                                <li class="trading-features__item">
+                                    Enjoy order placement of crypto and stocks at zero commissions, margin trading,
+                                    newsrooms, signals and many other features at your fingertips.
+                                </li>
+                                <li class="trading-features__item">
+                                    Fortuna offers advanced analytics, charting functions, multiple interaction
+                                    possibilities with other traders, copy trading and much more
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <section class="trading-reliability trading__section section">
+                    <div class="trading__container container">
+                        <div class="trading__description">
+                            <h2 class="trading__title section-title">
+                                Start trading crypto risk free for the first time
+                            </h2>
+                            <div class="trading__text">
+                                <p>
+                                    Fortuna offers a full-fledged experience to every trader regardless of their
+                                    knowledge and experience. Beginners can start with a demo account and even win free
+                                    Fortuna tokens to start trading for real.
+                                </p>
+                            </div>
+                            <ul class="trading-features">
+                                <li class="trading-features__item">
+                                    Two versions — Lite and Pro — that suit every trader's needs in terms of
+                                    functionality and interface
+                                </li>
+                                <li class="trading-features__item">
+                                    Vast knowledge base with learning resources rewarding users with the native Fortuna
+                                    token for completing them
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="trading__demo">
+                            <img src="/assets/images/phones/phone-2.jpg" alt="" class="trading__image" />
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </main>
     </body>
 
 </html>
