Added basic about section structure

--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,78 @@
                     </div>
                 </section>
             </section>
+            <section class="about section">
+                <div class="about__container container">
+                    <div class="about__description">
+                        <h2 class="about__title section-title">
+                            The revolution in mobile trading and investing apps
+                        </h2>
+                        <div class="about__text">
+                            <p>
+                                We are planning on becoming the go-to app for crypto and stock trading that uses Smart
+                                Contracts for deposits and order executions.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="platform-features">
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-1"></i>
+                            <h3 class="platform-feature__title">Advanced analytics</h3>
+                            <p class="platform-feature__description">
+                                Fortuna offers much more information and analysis
+                                tools to the users that are usually available on mobile trading apps today. We are
+                                implementing features that are only available on the top web-based applications and
+                                platforms.
+                            </p>
+                        </div>
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-2"></i>
+                            <h3 class="platform-feature__title">Advanced charting</h3>
+                            <p class="platform-feature__description">
+                                Fortuna offers advanced charting options such as candlesticks that are very rarely seen
+                                in mobile trading apps. The custom charting functionality will let the user customize
+                                the charts they want to see and display certain metrics.
+                            </p>
+                        </div>
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-3"></i>
+                            <h3 class="platform-feature__title">Margin trading</h3>
+                            <p class="platform-feature__description">
+                                We are offering margin trading with below-average interest rates compared to our
+                                competitors. Traders with higher ranks from the gamification system will get access to
+                                lower interest rates and higher margin ceilings.
+                            </p>
+                        </div>
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-4"></i>
+                            <h3 class="platform-feature__title">Full transparency</h3>
+                            <p class="platform-feature__description">
+                                Fortuna discloses information regarding the payment for order flow transparently on the
+                                blockchain. By doing so, users will have the exact information on what the difference in
+                                their buy or sell price is.
+                            </p>
+                        </div>
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-5"></i>
+                            <h3 class="platform-feature__title">Virtual trading</h3>
+                            <p class="platform-feature__description">
+                                The Virtual trading module allows traders to start learning the ropes without committing
+                                any resources, essentially trading risk-free and without the need to deposit any funds
+                                in their wallets.
+                            </p>
+                        </div>
+                        <div class="platform-feature">
+                            <i class="icon icon-feat-6"></i>
+                            <h3 class="platform-feature__title">Gamification</h3>
+                            <p class="platform-feature__description">
+                                The Virtual trading module allows traders to start learning the ropes without committing
+                                any resources, essentially trading risk-free and without the need to deposit any funds
+                                in their wallets.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
