Added basic early investor section structure

--- a/src/index.html
+++ b/src/index.html
@@ -181,6 +181,16 @@
                     </div>
                 </div>
             </section>
+            <section class="early-investor section">
+                <div class="container">
+                    <div class="early-investor__description">
+                        <h2 class="early-investor__title section-title">
+                            Become an early investor and reserve your 50% discount
+                        </h2>
+                        <a href="#" class="button button--filled">Register for ICO</a>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
