Added basic statistic section structure

--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,160 @@
                     </div>
                 </div>
             </section>
+            <section class="statistic section">
+                <div class="statistic__container container">
+                    <div class="statistic__description">
+                        <h2 class="section-title">The Fortuna Utility token</h2>
+                        <div class="statistic__text">
+                            <p>
+                                The MVT token is the project’s native token that will be used as the main currency in
+                                the ecosystem. The token will be used by traders to pay fees such as interests on margin
+                                trading and subscriptions. Fortuna will further act as an incentive mechanism, rewarding
+                                traders for engaging with the learning resources provided on the platform, referring
+                                friends, reaching milestones and for other kinds of engagement with the ecosystem.
+                            </p>
+                            <p>
+                                All unsold tokens will be burned.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="technology-table">
+                        <div class="technology-table__column">
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Token name
+                                </p>
+                                <p class="technology-table__value">
+                                    Fortuna
+                                </p>
+                            </div>
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Token supply
+                                </p>
+                                <p class="technology-table__value">
+                                    15,000,000 Fortuna
+                                </p>
+                            </div>
+                        </div>
+                        <div class="technology-table__column">
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Technology
+                                </p>
+                                <p class="technology-table__value">
+                                    ERC-20
+                                </p>
+                            </div>
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Token ICO
+                                </p>
+                                <p class="technology-table__value">
+                                    10,000,000 Fortuna
+                                </p>
+                            </div>
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Hard cap
+                                </p>
+                                <p class="technology-table__value">
+                                    10,000,000 USD
+                                </p>
+                            </div>
+                        </div>
+                        <div class="technology-table__column">
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    Token type
+                                </p>
+                                <p class="technology-table__value">
+                                    Utility
+                                </p>
+                            </div>
+                            <div class="technology-table__cell">
+                                <p class="technology-table__property">
+                                    ICO price
+                                </p>
+                                <p class="technology-table__value">
+                                    1 USD
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="technology-sales">
+                        <div class="technology-sale">
+                            <p class="technology-sale__title">Private-sale</p>
+                            <div class="technology-sale__description">
+                                <p>
+                                    2M Fortuna Tokens at 0.5 USD
+                                </p>
+                                <p>
+                                    Dates: 01.10.2021 — 30.11.2021
+                                </p>
+                                <p>
+                                    Hard cap: 1,000,000 USD
+                                </p>
+                                <p>
+                                    Discount: 50%
+                                </p>
+                            </div>
+                        </div>
+                        <div class="technology-sale">
+                            <p class="technology-sale__title">Pre-sale</p>
+                            <div class="technology-sale__description">
+                                <p>
+                                    1.5M Fortuna tokens at 0.75 USD
+                                </p>
+                                <p>
+                                    Date Pre-Sale: 01.12.2021 — 31.01.2022
+                                </p>
+                                <p>
+                                    Hard Cap: 1,125,000 USD
+                                </p>
+                                <p>
+                                    Discount: 25%
+                                </p>
+                            </div>
+                        </div>
+                        <div class="technology-sale">
+                            <p class="technology-sale__title">Main-sale</p>
+                            <div class="technology-sale__description">
+                                <p>
+                                    7.5M tokens at 1 USD
+                                </p>
+                                <p>
+                                    Dates: 01.02.2022 — 31.04.2022
+                                </p>
+                                <p>
+                                    Hard Cap: 10,000,000 USD
+                                </p>
+                                <p>
+                                    All unsold tokens are burned.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sales-charts">
+                        <div class="sales-chart">
+                            <img src="/assets/images/charts/chart-1.png" alt="" class="sales-chart__graph">
+                            <ul class="sales-chart__legend sales-chart__legend--column">
+                                <li>Team — 33%</li>
+                                <li>Crowdsale — 67%</li>
+                            </ul>
+                        </div>
+                        <div class="sales-chart">
+                            <img src="/assets/images/charts/chart-2.png" alt="" class="sales-chart__graph">
+                            <ul class="sales-chart__legend">
+                                <li>Legal — 5%</li>
+                                <li>Marketing — 35%</li>
+                                <li>Development — 50%</li>
+                                <li>Incentives — 10%</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
