Added basic roadmap structure

--- a/src/index.html
+++ b/src/index.html
@@ -345,6 +345,73 @@
                     </div>
                 </div>
             </section>
+            <section class="product-map section">
+                <div class="container product-map__container">
+                    <div class="product-map__description">
+                        <h2 class="product-map__title section-title">
+                            Roadmap
+                        </h2>
+                    </div>
+                    <div class="roadmap">
+                        <div class="roadmap__container">
+                            <div class="roadmap__step">
+                                <div class="roadmap__description">
+                                    <p class="roadmap__date">Sept 2021</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Airdrop</li>
+                                        <li class="roadmap__action">Bounty campaign</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="roadmap__step">
+                                <div class="roadmap__description">
+
+                                    <p class="roadmap__date">Oct 2021</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Private sale</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="roadmap__step">
+                                <div class="roadmap__description">
+                                    <p class="roadmap__date">Dec 2021</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Pre-sale</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="roadmap__step roadmap__step--down">
+                                <div class="roadmap__description">
+                                    <p class="roadmap__date">Feb 2022</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Start Main-Sale</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="roadmap__step roadmap__step--down">
+                                <div class="roadmap__description">
+                                    <p class="roadmap__date">Q3 2022</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Exchange listing</li>
+                                        <li class="roadmap__action">Marketing</li>
+                                        <li class="roadmap__action">Development</li>
+                                        <li class="roadmap__action">Testing</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="roadmap__step roadmap__step--down">
+                                <div class="roadmap__description">
+                                    <p class="roadmap__date">Q4 2023</p>
+                                    <ul class="roadmap__actions">
+                                        <li class="roadmap__action">Full rollout of the ecosystem</li>
+                                        <li class="roadmap__action"> Release of the mobile apps (Android / iOS)</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
