Added basic team section structure

--- a/src/index.html
+++ b/src/index.html
@@ -412,6 +412,127 @@
                     </div>
                 </div>
             </section>
+            <section class="section teams">
+                <div class="container">
+                    <section class="team__section">
+                        <h2 class="section-title">Team</h2>
+                        <div class="team-members swiper" id="team-swiper">
+                            <div class="team-members__list swiper-wrapper">
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-members__previous">
+                                <i class=" icon icon-arrow-left"></i>
+                            </div>
+                            <div class="team-members__next">
+                                <i class="icon icon-arrow-right"></i>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="team__section">
+                        <h2 class="section-title">Advisory Team</h2>
+                        <div class="team-members swiper" id="advisory-team-swiper">
+                            <div class="team-members__list swiper-wrapper">
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="team-member">
+                                    <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
+                                        class="team-member__avatar">
+                                    <div class="team-member__information">
+                                        <p class="team-member__name">Mark Mustermann</p>
+                                        <p class="team-member__position">CEO</p>
+                                        <p class="team-member__cv">
+                                            <a href="/">
+                                                <i class="icon icon-linked-in"></i>
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-members__previous">
+                                <i class="icon icon-arrow-left"></i>
+                            </div>
+                            <div class="team-members__next">
+                                <i class="icon icon-arrow-right"></i>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </section>
         </main>
     </body>
 
