Added basic early adopter section structure

--- a/src/index.html
+++ b/src/index.html
@@ -533,6 +533,17 @@
                     </section>
                 </div>
             </section>
+            <section class="early-adopter section">
+                <div class="container">
+                    <div class="early-adopter__description">
+                        <h2 class="early-adopter__title section-title">Become an early adopter</h2>
+                        <div class="early-adopter__text">
+                            <p>First movers get up to 50% bonus on their investment.</p>
+                        </div>
+                        <a href="" class="early-adopter__button button button--filled">Register for ICO</a>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 
