Added basic footer structure

--- a/src/index.html
+++ b/src/index.html
@@ -545,6 +545,64 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__sign-up">
+                    <div class="sign-up-field">
+                        <p class="sign-up-field__title">Sign up for exclusive updates</p>
+                        <input type="text" class="sign-up-field__input" placeholder="Your email">
+                        <a href="#" class="button button--filled sign-up-field__button">Sign up</a>
+                    </div>
+                </div>
+                <div class="footer__divider"></div>
+                <div class="footer__grid">
+                    <div class="footer__section">
+                        <p class="footer__subtitle">About us</p>
+                        <ul class="footer__list">
+                            <li><a href="#">Imprint</a></li>
+                            <li><a href="#">Terms and conditions</a></li>
+                            <li><a href="#">Token sale agreement</a></li>
+                            <li><a href="#">Privacy policy</a></li>
+                            <li><a href="#">AML policy</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__section">
+                        <p class="footer__subtitle">For investors</p>
+                        <ul class="footer__list">
+                            <li><a href="#">Register for the ICO</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__section">
+                        <p class="footer__subtitle">Documents</p>
+                        <ul class="footer__list">
+                            <li><a href="#">Whitepaper</a></li>
+                            <li><a href="#">Onepager</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="social-links">
+                    <a href="#" class="social-links__item">
+                        <i class="icon icon-telegram"></i>
+                    </a>
+                    <a href="#" class="social-links__item">
+                        <i class="icon icon-facebook"></i>
+                    </a>
+                    <a href="#" class="social-links__item">
+                        <i class="icon icon-twitter"></i>
+                    </a>
+                    <a href="#" class="social-links__item">
+                        <i class="icon icon-youtube"></i>
+                    </a>
+                    <a href="#" class="social-links__item">
+                        <i class="icon icon-linked-in"></i>
+                    </a>
+                </div>
+                <p class="footer__copyright">
+                    2021 Fortuna Coin Inc, All rights reserved
+                </p>
+            </div>
+        </footer>
     </body>
 
 </html>
