Fixed charts legend

--- a/src/index.html
+++ b/src/index.html
@@ -326,14 +326,14 @@
                         </div>
                     </div>
                     <div class="sales-charts">
-                        <div class="sales-chart">
+                        <div class="sales-chart sales-chart--first">
                             <img src="/assets/images/charts/chart-1.png" alt="" class="sales-chart__graph">
                             <ul class="sales-chart__legend sales-chart__legend--column">
                                 <li>Team — 33%</li>
                                 <li>Crowdsale — 67%</li>
                             </ul>
                         </div>
-                        <div class="sales-chart">
+                        <div class="sales-chart sales-chart--second">
                             <img src="/assets/images/charts/chart-2.png" alt="" class="sales-chart__graph">
                             <ul class="sales-chart__legend">
                                 <li>Legal — 5%</li>
