Fixed components locations

--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,7 @@
             </section>
             <section class="section teams">
                 <div class="container">
-                    <section class="team__section">
+                    <section class="teams__section">
                         <h2 class="section-title">Team</h2>
                         <div class="team-members swiper" id="team-swiper">
                             <div class="team-members__list swiper-wrapper">
@@ -466,7 +466,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="team__section">
+                    <section class="teams__section">
                         <h2 class="section-title">Advisory Team</h2>
                         <div class="team-members swiper" id="advisory-team-swiper">
                             <div class="team-members__list swiper-wrapper">
