--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,30 @@
 
     <body>
         <header class="header">
-            <div class="container">
-                <nav class="header__navigation navigation">
-                    <img src="/assets/images/logo.svg" alt="" class="navigation__logo">
-                    <ul class="navigation__list">
-                        <li class="navigation__item">
-                            <a href="#" class="navigation__link navigation__link--active">What is Fortuna</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#" class="navigation__link">ICO details</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#" class="navigation__link">Roadmap</a>
-                        </li>
-                        <li class="navigation__item">
-                            <a href="#" class="navigation__link">Team</a>
-                        </li>
-                    </ul>
-                    <a href="#" class="navigation__button">Login</a>
+            <div class="header__container container">
+                <nav class="navigation header__navigation">
+                    <div class="navigation__container">
+                        <div class="navigation__header">
+                            <img src="/assets/images/logo.svg" alt="" class="navigation__logo">
+                            <button class="navigation__toggle">
+                            </button>
+                        </div>
+                        <ul class="navigation__list">
+                            <li class="navigation__item">
+                                <a href="#" class="navigation__link navigation__link--active">What is Fortuna</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#" class="navigation__link">ICO details</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#" class="navigation__link">Roadmap</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a href="#" class="navigation__link">Team</a>
+                            </li>
+                        </ul>
+                        <a href="#" class="navigation__button">Login</a>
+                    </div>
                 </nav>
                 <div class="header__description">
                     <h1 class="header__title section-title">
@@ -418,7 +424,7 @@
                         <h2 class="section-title">Team</h2>
                         <div class="team-members swiper" id="team-swiper">
                             <div class="team-members__list swiper-wrapper">
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -431,7 +437,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -444,7 +450,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -470,7 +476,7 @@
                         <h2 class="section-title">Advisory Team</h2>
                         <div class="team-members swiper" id="advisory-team-swiper">
                             <div class="team-members__list swiper-wrapper">
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -483,7 +489,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -496,7 +502,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
@@ -509,7 +515,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="team-member">
+                                <div class="team-member swiper-slide">
                                     <img src="https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg" alt=""
                                         class="team-member__avatar">
                                     <div class="team-member__information">
